# blackboard

./: .gitignore  .kdev_include_paths  CMakeLists.txt  Makefile  README.txt  blackboard.cpp  blackboard.kdev4  database.cpp  script.sh
train/: a.txt  b.txt  c.txt  contour_a.cpp  contour_b.cpp  contour_c.cpp  contour_d.cpp  contour_e.cpp
